public/styles/main.scss
/* ... */
.navbar-brand {
    font-size: 36px;
    line-height: 18px;
}

.wynno, 
.navbar .navbar-brand,
.navbar .navbar-brand:hover {
    font-family: "Ubuntu", sans-serif;
    color: $deep-purple;
}

.y {
    color: $aye-green;
}

.n {
    color: $nay-red;
}

.navbar .nav > .passing > a,
.navbar .nav > .passing > a:hover {
    color: $aye-green;
}

.navbar .nav > .failing > a,
.navbar .nav > .failing > a:hover {
    color: $nay-red;
}

.navbar .navbar-btn {
    background-image: none;
    background-color: whitesmoke;
}

.navbar .navbar-btn:hover {
    background-color: whitesmoke;
    border-color: $deep-purple;
}

.navbar .navbar-btn:focus {
    background-color: #e6e6e6;
}

.navbar .navbar-btn .icon-bar {
}

.navbar .navbar-btn .icon-bar.firstBar {
    background-color: $aye-green;
}

.navbar .navbar-btn .icon-bar.secondBar {
    background-color: $nay-red;
}

.navbar .navbar-btn .icon-bar.thirdBar {
    background-color: $aye-green;
}

.navMobileSignIn {
    padding: 9px 5px;
}

.mobileButton {
    font-size: 24px;
}

.desktopButton {
    font-size: 21px;
}

a.navbar-toggle.glyphButton {
    padding: 5px 8px;
    margin-left: 5px;
}

button.navbar-toggle.glyphButton {
    padding: 5px 8px;
}

a.navbar-toggle.glyphButton:hover {
    text-decoration: none;
}

a.btn.btn-default.navbar-btn.glyphButton {
    padding: 4px 10px;
    margin-right: 15px;
    margin-left: 5px;
}

button.navbar-toggle.noBorder {
    border-color: transparent;
    margin-right: 0;
}

.customDivider {
    border-bottom: 1px solid #e7e7e7;
}

// landing page

.jumbotron {
    background-color: $jumbo-purple;
}

.jumbotron > .headline {
    color: $deep-purple;
}

.jumbotron h1, .jumbotron h2 {
    font-family: "Open Sans", sans-serif;
}

.jumbotron > h1 {
    margin: 0;
}

.landingMainBig {
    font-size: 6em;
}

.landingMainSmall {
    position: relative;
    left: -20px;
    font-size: 5em;
    vertical-align: 22px;
}

.landingFeatureSmall {
    font-size: 5em;
    vertical-align: 18px;
}

.landingBird {
    color: $twitter-blue;
}

.landingFilter {
    color: $aye-green;
}

.landingGrin {
    color: $deep-purple;
}

.landingBannerBackground {
    background-color: moccasin;
}

.buzzword {
    color: orangered;
}

.topAndBottomPadding {
    padding-top: 20px;
    padding-bottom: 10px;
}

.landingFeature {
    font-size: 5em;
}

.tryItContainer {
    padding-top: 30px;
}

.tryIt {
    font-size: 20px;
    //background-color: #ff6a32;
    background-color: $shallower-purple;
    width: 70%;
    border-color: $deep-purple;
}

.tryIt:hover {
    background-color: $deep-purple;
    border-color: $deep-purple;
}

.trainGlyph {
    display: inline-block;
}

.beaker {
    padding-top: 10px;
}

.landingCopy {
    font-size: 20px;
    line-height: 28px;
}

.welcomeCopy {
    font-size:22px;
    line-height: 36px;
}

.halfRule {
    width: 100px;
    margin: 40px auto;
    border-top-color: $shallower-purple;
}

.fullRule {
    border-top-color: $shallower-purple;
}

// tweet styling

.twitterLogo {
    float: right;
    padding: 10px 0 0 0;
    font-size: 18px;
    color: $twitter-blue;
}

.twitterLogo > a, .twitterLogo > a:hover {
    color: inherit;
    text-decoration: none;
}

.tweet {
    padding-bottom: 5px;
}

.tweetColPadding {
    padding-left: $nontweet-tweet-column-padding;
    padding-right: $nontweet-tweet-column-padding;
}

.tweetStuff {
    padding: $tweet-padding;
    background-color: $tweet-background-color;
    min-height: 90px;
    border-top: $tweet-border-dotted;
    border-right: $tweet-border-dotted;
    border-bottom: $tweet-border-dotted;
    border-left: $tweet-border-dotted;
    overflow: auto; //necessary to prevent badge from protruding outside of tweetStuff box
}

.leftColumn {
    height: 100%;
    float: left;
}

.tweeterImage {
}

.tweeterImage > img {
    vertical-align: inherit;
}

.rightColumn {
    min-height: 79px; // 79 is height of the interior of tweetStuff (i.e. 90px minus 10px padding and 1px border)
    padding-left: 10px;
    overflow: hidden;
    position: relative;
}

.tweetMeta {
    width: 100%;
    display: inline-block;
}

.tweetTimestamp {
    float: right;
}

.tweeterName {
    font-size: 14px;
    font-weight: bold;
    color: #000000;
}

.tweeterScreenName, .retweeterName {
    color: #989898;
}

.tweeterScreenName:hover, .retweeterName:hover {
    text-decoration: underline;
}

.tweetTimestamp {
}

.pvalue {
    padding-left: 8px;
}

.pvalue > .badge {
    background-color: $badge-purple;
}

.tweetText {
    font-size: 14px;
}

.tweetFooter {
    color: #989898;
    padding-top: 10px;
    position: absolute;
    bottom: 0;
    right: 0;
}

.retweetedStatus {
    color: #989898;
}

$tweet-caption-font-size: 14px;
$retweet-header-padding-bottom: 3px;

.tweetMeta, .tweetFooter, .retweetHeader {
    font-size: 12px;
    line-height: 14px;
}

.retweetHeader {
    padding-bottom: $retweet-header-padding-bottom;
}

.retweetSpacer {
    float: right;
    height: $tweet-caption-font-size;
    padding-bottom: $retweet-header-padding-bottom;
    color: #77b255;
    height: 100%;
}

.tweetCaptionIcon {
    padding-right: 4px;
}

.tweetCaptionAction {
    padding-right: 6px;
}

.tweetFooter > a {
    color: #989898;
}

.tweetFooter > a:hover {
    color: #989898;
    text-decoration: none;
}

.tweetFooter > a > tweetCaptionAction:hover {
    text-decoration: underline;
}

// vote button styling

.voteButtons {
    // background-color: $tweet-background-color;
    // border-right: $tweet-border-dotted;
    // border-bottom: $tweet-border-dotted;
    // border-left: $tweet-border-dotted;
    // display: inline-block;
}

.voteButtons .btn {
    padding: 3px 12px;
}

.voteButtons .btn-default {
    border-color: $tweet-border-color;
}

.voteAye {
    border-right: $tweet-border-dotted;
}

.voteAye, .voteNay {
    // display: inline-block;
    // width: 49%;
}

.aye {
    font-size: $tweet-glyph-size;
    color: $aye-green;
}

.nay {
    font-size: $tweet-glyph-size;
    color: $nay-red;
}
/* ... */

